<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gre"
    android:orientation="vertical"
    tools:context=".login_signup.ForgetPassword">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_gre">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_corner_without_padding">

        <EditText
            android:id="@+id/editText_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </LinearLayout>


    <Button
        android:id="@+id/button_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:background="@drawable/select_rec_stroke"
        android:layout_margin="16dp"
        android:text="@string/send_email" />
</LinearLayout>